--- a/om_oss.html
+++ b/om_oss.html
@@ -20,7 +20,7 @@
       <li><a href="meny.html">Meny</a></li>
       <li><a href="spel.html">Spel</a></li>
       <li><a href="lokal.html">Lokal</a></li>
-      <li><a href="hitta hit.html">Om oss</a></li>
+      <li><a href="om_oss.html">Om oss</a></li>
     </ul>
   </nav>
 
